# qml-viewer

./: README.md  layout.qml  pyproject.toml  qml_viewer.py
