[tool.poetry]
name = "pyside-qml-viewer"
version = "0.1.0"
description = "A standalone application for viewing qml files."
authors = ["Ryan Greenup <ryanxgreenup@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "./qml_viewer.py"}]

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.8.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pyright = "^1.1.386"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-qml-viewer = "qml_viewer:main"
